// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Middleware: Email Verification Sender can send to multiple users 1`] = `
"# Email Verification

Your e-mail (sampleA@example.com) has been registered in [Talakutnangan](http://localhost).

Please click the button below to verify:
<a class=\\"verify\\" href=\\"http://localhost/user/verify?=sampleA@example.com\\">Verify e-mail</a>

## Note
If the button above does not work properly, visit http://localhost/user/verify?=sampleA@example.com
"
`;

exports[`Middleware: Email Verification Sender can send to multiple users 2`] = `
"<h1 id=\\"emailverification\\">Email Verification</h1>
<p>Your e-mail (sampleA@example.com) has been registered in <a href=\\"http://localhost\\">Talakutnangan</a>.</p>
<p>Please click the button below to verify:
<a class=\\"verify\\" href=\\"http://localhost/user/verify?=sampleA@example.com\\">Verify e-mail</a></p>
<h2 id=\\"note\\">Note</h2>
<p>If the button above does not work properly, visit http://localhost/user/verify?=sampleA@example.com</p>"
`;

exports[`Middleware: Email Verification Sender can send to multiple users 3`] = `
"# Email Verification

Your e-mail (sampleB@example.net) has been registered in [Talakutnangan](http://localhost).

Please click the button below to verify:
<a class=\\"verify\\" href=\\"http://localhost/user/verify?=sampleB@example.net\\">Verify e-mail</a>

## Note
If the button above does not work properly, visit http://localhost/user/verify?=sampleB@example.net
"
`;

exports[`Middleware: Email Verification Sender can send to multiple users 4`] = `
"<h1 id=\\"emailverification\\">Email Verification</h1>
<p>Your e-mail (sampleB@example.net) has been registered in <a href=\\"http://localhost\\">Talakutnangan</a>.</p>
<p>Please click the button below to verify:
<a class=\\"verify\\" href=\\"http://localhost/user/verify?=sampleB@example.net\\">Verify e-mail</a></p>
<h2 id=\\"note\\">Note</h2>
<p>If the button above does not work properly, visit http://localhost/user/verify?=sampleB@example.net</p>"
`;

exports[`Middleware: Email Verification Sender can send to single user 1`] = `
"# Email Verification

Your e-mail (sample@example.com) has been registered in [Talakutnangan](http://localhost).

Please click the button below to verify:
<a class=\\"verify\\" href=\\"http://localhost/user/verify?=sample@example.com\\">Verify e-mail</a>

## Note
If the button above does not work properly, visit http://localhost/user/verify?=sample@example.com
"
`;

exports[`Middleware: Email Verification Sender can send to single user 2`] = `
"<h1 id=\\"emailverification\\">Email Verification</h1>
<p>Your e-mail (sample@example.com) has been registered in <a href=\\"http://localhost\\">Talakutnangan</a>.</p>
<p>Please click the button below to verify:
<a class=\\"verify\\" href=\\"http://localhost/user/verify?=sample@example.com\\">Verify e-mail</a></p>
<h2 id=\\"note\\">Note</h2>
<p>If the button above does not work properly, visit http://localhost/user/verify?=sample@example.com</p>"
`;
